mon/influxdb/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: mon
  annotations:
    flux.weave.works/automated: 'false'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      volumes:
      - name: influxdb
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:influxdb
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      containers:
      - name: influxdb
        image: influxdb:1.7.8
        volumeMounts:
        - name: influxdb
          mountPath: /var/lib/influxdb
