mon/influxdb/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  namespace: mon
  annotations:
    flux.weave.works/automated: 'false'
spec:
  serviceName: influxdb
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      volumes:
      - name: influxdb
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:influxdb
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: telegraf-conf
        configMap:
          name: telegraf-conf
      containers:
      - name: influxdb
        image: influxdb:2.1.1
        volumeMounts:
        - name: influxdb
          mountPath: /var/lib/influxdb2
      - name: telegraf
        image: telegraf:1.20.3
        volumeMounts:
        - name: telegraf-conf
          mountPath: /etc/telegraf.conf
          subPath: telegraf.conf
