mon/influxdb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: mon
spec:
  selector:
    app: influxdb
  ports:
  - name: http-api
    port: 8086
