mon/influxdb/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: influxdb
  namespace: mon
spec:
  podSelector:
    matchLabels:
      app: influxdb
  ingress:
  - ports:
    - port: 8086
    from: []
